# Screen-Time-Saver-AI-Powered-Summarized

./: .gitignore  LICENSE  README.md  app.py  config.example.yaml  pyproject.toml
.claude/commands/: add-source.md  digest.md  setup-delivery.md
.github/workflows/: ci.yml
src/screen_time_saver/: __init__.py  audio.py  cli.py  config.py  models.py  output.py  summarizer.py
src/screen_time_saver/delivery/: __init__.py  base.py  telegram_bot.py  twilio_call.py
src/screen_time_saver/fetchers/: __init__.py  base.py  rss.py  twitter.py  youtube.py
tests/: test_security_basics.py
